--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       with:
         dotnet-version: '6.x'
     - name: Publish .NET Core Project
-      run: dotnet publish BlazorConfig.csproj -c Release -o release --nologo
+      run: dotnet publish BlazorGitHubPagesDemo.csproj -c Release -o release --nologo
     - name: Commit wwwroot to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@3.7.1
       with:
