--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
         # uses GitHub's checkout action to checkout code form the master branch
-    - uses: actions/setup-dotnet@v3
+    - uses: actions/checkout@v2
+        # sets up .NET 6.0
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '6.x'
+        dotnet-version: 6.0
+      # publishes Blazor project to the release-folder
     - name: Publish .NET Core Project
       run: dotnet publish BlazorGitHubPagesDemo.csproj -c Release -o release --nologo
     - name: Commit wwwroot to GitHub Pages
