--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,13 +12,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     # uses GitHub's checkout action to checkout code form the master branch
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     
     # sets up .NET Core SDK 3.1
-    - name: Setup .NET Core SDK
-      uses: actions/setup-dotnet@v1
+    - name: Setup dotnet 8.x
+      uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 3.1
+        dotnet-version: '8.x'
 
     # publishes Blazor project to the release-folder
     - name: Publish .NET Core Project
