--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
 
     # publishes Blazor project to the release-folder
     - name: Publish .NET Core Project
-      run: dotnet publish PortfolioWebsite -c Release -o release --nologo
+      run: dotnet publish PortfolioWebsite.csproj -c Release -o release --nologo
     
     # changes the base-tag in index.html from '/' to 'danicus2000000.github.io' to match GitHub Pages repository subdirectory
     - name: Change base-tag in index.html from / to danicus2000000.github.io
