--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,8 @@ jobs:
       run: dotnet workload install wasm-tools; dotnet publish PortfolioWebsite.csproj -c Release -o release --nologo
     
     # changes the base-tag in index.html from '/' to 'danicus2000000.github.io' to match GitHub Pages repository subdirectory
-    - name: Change base-tag in index.html from / to danicus2000000.github.io
-      run: sed -i 's/<base href="\/" \/>/<base href="\/danicus2000000.github.io\/" \/>/g' release/wwwroot/index.html
+    #- name: Change base-tag in index.html from / to danicus2000000.github.io
+      #run: sed -i 's/<base href="\/" \/>/<base href="\/danicus2000000.github.io\/" \/>/g' release/wwwroot/index.html
     
     # copy index.html to 404.html to serve the same file when a file is not found
     - name: copy index.html to 404.html
