--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,6 @@ jobs:
     - name: Setup node 3.x
       uses: actions/setup-node@v4
 
-
     # Installs required npm packages
     - name: Installs required npm dependencies
       working-directory: ./my-website
@@ -29,10 +28,7 @@ jobs:
       working-directory: ./my-website
       run: npm run build
 
-    # add .nojekyll file to tell GitHub pages to not treat this as a Jekyll project. (Allow files and folders starting with an underscore)
-    - name: Add .nojekyll file
-      run: touch build/.nojekyll
-      
+    # Commit to gh-pages branch
     - name: Commit wwwroot to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@v4
       with:
