--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "my-website",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "create-react-app": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.19.0",
