--- a/package.json
+++ b/package.json
@@ -1,18 +1,14 @@
 {
   "name": "personal-portfolio",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.3",
-    "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "nodemailer": "^6.9.13",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.3.1",
-    "react-mailchimp-subscribe": "^2.1.3",
     "react-multi-carousel": "^2.8.5",
     "react-on-screen": "^2.1.1",
     "react-responsive-carousel": "^3.2.23",
@@ -23,13 +19,11 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
