--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
 
     # Generate npm build
     - name: Generates npm build
-      run: npm run build
+      run: CI=false npm run build
 
     # Commit to gh-pages branch
     - name: Commit wwwroot to GitHub Pages
