--- a/package.json
+++ b/package.json
@@ -1,41 +1,37 @@
 {
-  "name": "personal-portfolio",
-  "version": "1.0.0",
+  "name": "my-vite-app",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
+  },
   "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.3",
-    "react": "^19.0.0",
     "react-bootstrap": "^2.10.6",
     "react-bootstrap-icons": "^1.11.5",
-    "react-dom": "^19.0.0",
     "react-multi-carousel": "^2.8.5",
     "react-on-screen": "^2.1.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.0.2",
-    "react-router-hash-link": "^2.4.3",
-    "react-scripts": "^5.0.1"
+    "react-router-hash-link": "^2.4.3"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@eslint/js": "^9.15.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^9.15.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "globals": "^15.12.0",
+    "vite": "^6.0.1"
   }
 }
