--- a/blog/hugo.yml
+++ b/blog/hugo.yml
@@ -2,3 +2,8 @@ baseURL: https://danicus2000000.github.io/blog
 languageCode: en-uk
 title: The LAN Before Time
 theme: ["PaperMod"]
+outputs:
+  home:
+      - HTML
+      - RSS
+      - JSON
