--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,8 @@ jobs:
     # sets up Go
     - name: Setup Go
       uses: actions/setup-go@v5
+      with:
+        go-version: '1.23.5'
 
     # Installs required npm packages
     - name: Installs required npm dependencies
@@ -41,26 +43,21 @@ jobs:
     # Generate npm build
     - name: Generates npm build
       run: npm run build
-    
-    # Navigate into blog folder
-    - name: Navigate to blog
-      run: cd blog
 
     # Build blog
     - name: Build blog
       run: hugo build
+      working-directory: ./blog
     
     # Rename build folder to correct web format
     - name: Rename build folder
-      run: ren public blog
+      run: mv public blog
+      working-directory: ./blog
 
     # Copy blog build to root
     - name: Copy blog build to root
-      run: mv public ../dist
-   
-    # Navigate to root
-    - name: Navigate to root
-      run: cd ..
+      run: mv blog ../dist
+      working-directory: ./blog
 
     # Commit to gh-pages branch if this is a main branch push
     - name: Commit www root to GitHub Pages
