--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.3",
+    "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-bootstrap-icons": "^1.11.5",
+    "react-dom": "^19.0.0",
     "react-multi-carousel": "^2.8.5",
     "react-on-screen": "^2.1.1",
     "react-responsive-carousel": "^3.2.23",
@@ -32,6 +32,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "typescript": "^5.8.2",
     "vite": "^6.2.2"
   }
 }
