--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "my-vite-app",
+  "name": "danicus2000000.github.io",
   "private": true,
-  "version": "0.0.0",
+  "version": "2.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
