--- a/blog/hugo.yml
+++ b/blog/hugo.yml
@@ -1,4 +1,4 @@
-baseURL: https://danicus2000000.github.io/blog
+baseURL: {{ absURL "" }}{{'/blog'}}
 languageCode: en-uk
 title: The LAN Before Time
 module:
